# pose_estimation

./: .gitignore  .gitmodules  poseCam.py  recordCam2.py
ximea_bind/: CMakeLists.txt
ximea_bind/src/: ximea_wrap.cpp
